trunk/Archive2/3e/5dcc547c2dc696/output
main.cpp:53:37: error: too few arguments to function call, expected 1, have 0
    std::cout << "t1: " << t1.value() << "\n";
                           ~~~~~~~~ ^
main.cpp:29:5: note: 'value' declared here
    double value(const Vec<n>&) const
    ^
main.cpp:54:37: error: too few arguments to function call, expected 1, have 0
    std::cout << "t2: " << t2.value() << "\n";
                           ~~~~~~~~ ^
main.cpp:29:5: note: 'value' declared here
    double value(const Vec<n>&) const
    ^
main.cpp:55:37: error: too few arguments to function call, expected 1, have 0
    std::cout << "t3: " << t3.value() << "\n";
                           ~~~~~~~~ ^
main.cpp:29:5: note: 'value' declared here
    double value(const Vec<n>&) const
    ^
3 errors generated.
